<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    tools:background="#262932">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="130dp"
        android:layout_height="165dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/image_list"
            android:layout_width="130dp"
            android:layout_height="165dp"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_a_start_is_born"
            android:contentDescription="@string/image_movie_tv" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/born_as_a_star"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:maxLines="2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />


    <TextView
        android:id="@+id/year_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_tag"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:textSize="15sp"
        android:text="@string/_2019"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/title_list" />

    <TextView
        android:id="@+id/language_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_tag"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:paddingBottom="5dp"
        android:text="@string/en"
        android:textSize="15sp"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/year_list"
        app:layout_constraintTop_toBottomOf="@+id/title_list" />

    <TextView
        android:id="@+id/star_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_tag"
        android:drawablePadding="5dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/_8_4"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:drawableLeftCompat="@drawable/star_icon"
        app:layout_constraintBottom_toBottomOf="@+id/language_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/language_list"
        app:layout_constraintTop_toTopOf="@+id/language_list" />

    <TextView
        android:id="@+id/synopsis_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:maxLines="4"
        android:justificationMode="inter_word"
        android:text="@string/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="12sp"
        android:textColor="#6E6F77"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/year_list"
        tools:targetApi="o" />


</androidx.constraintlayout.widget.ConstraintLayout>